--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="box">
             <div class="todo-app">
                 <div class="title">
-                    <h2>To-Do List</h2>
+                    <h2>Janani To-Do List</h2>
                     <img class="logo" src="img/logo.png">
                 </div>
                 <div class="row">
